--- a/myProject/myApp/templates/myApp/create_recipe.html
+++ b/myProject/myApp/templates/myApp/create_recipe.html
@@ -89,15 +89,15 @@
         }
 
         .back-button:hover {
-            background-color: #87CEEB;
+            background-color: #d6efed;
+            transform: scale(1.05);
         }
 
         /* Container styling */
         .container {
-            max-width: 600px;
             margin: 100px auto; /* Margin top to avoid overlap with fixed navbar */
             padding: 20px;
-            background-color: #87ceeb; /* Background for container */
+            background-color: #bfebfc;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Shadow for container */
             animation: slideIn 0.5s forwards; /* Animation for container */
@@ -186,6 +186,7 @@
         </div>
         <ul>
             <li><a href="{% url 'homepage' %}">HOME</a></li>
+            <li><a href="{% url 'about_us' %}">ABOUT US</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url 'profile' %}">MY PROFILE</a></li>
                 <li><a href="{% url 'create_recipe' %}">CREATE RECIPE</a></li>
