--- a/myProject/myApp/templates/myApp/homepage.html
+++ b/myProject/myApp/templates/myApp/homepage.html
@@ -158,6 +158,7 @@
         </div>
         <ul>
             <li><a href="{% url 'homepage' %}">Home</a></li>
+            <li><a href="{% url 'about_us' %}">About Us</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url 'profile' %}">My Profile</a></li>
                 <li><a href="{% url 'create_recipe' %}">Create Recipe</a></li>
