--- a/myProject/myApp/templates/myApp/register.html
+++ b/myProject/myApp/templates/myApp/register.html
@@ -64,7 +64,7 @@
 
         /* Register container styling */
         .register-container {
-            background-color: #b7d3df;
+            background-color:#87CEEB; 
             border-radius: 10px;
             padding: 40px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -98,7 +98,7 @@
         }
 
         .register-container form button {
-            background-color: #87CEEB;
+            background-color: black; 
             color: white;
             padding: 10px;
             border: none;
@@ -109,7 +109,8 @@
         }
 
         .register-container form button:hover {
-            background-color: #6cb4e4;
+            background-color: #d6efed; /* Optional hover color */
+            color: #000000;
         }
 
         .register-container a {
@@ -157,6 +158,7 @@
         </div>
         <ul>
             <li><a href="{% url 'homepage' %}">Home</a></li>
+            <li><a href="{% url 'about_us' %}">About Us</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'profile' %}">My Profile</a></li>
             <li><a href="{% url 'create_recipe' %}">Create Recipe</a></li>
